test/types/range/vass/indexorder-nofirst-3.good
indexorder-nofirst-3.chpl:2: error: halt reached - invoking indexOrder on a range (10.. by -1) that does not have the first index
