test/types/range/vass/indexorder-nofirst-3.future
error message: need to indicate that an error was upon an invocation of indexOrder, rather than alignedHigh
